WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89626
Non-fixed length margins don't work with align=center
https://bugs.webkit.org/show_bug.cgi?id=89626
Summary
Non-fixed length margins don't work with align=center
Julien Chaffraix
Reported
2012-06-20 18:26:15 PDT
Follow up of
bug 89515
, the attached bug nicely handled the fixed length case (100px) but it didn't handle non-fixed length (for example, calculated or percent) properly. It turns out calling Length::value() on an arbitrary Length is not a good idea. Patch forthcoming.
Attachments
Proposed fix 1. Use minimumValueForLength instead of Lengt::value.
(7.79 KB, patch)
2012-06-20 19:25 PDT
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Chaffraix
Comment 1
2012-06-20 19:25:26 PDT
Created
attachment 148713
[details]
Proposed fix 1. Use minimumValueForLength instead of Lengt::value.
Levi Weintraub
Comment 2
2012-06-21 10:06:38 PDT
Comment on
attachment 148713
[details]
Proposed fix 1. Use minimumValueForLength instead of Lengt::value. Good catch! That certainly will not do.
WebKit Review Bot
Comment 3
2012-06-21 10:15:34 PDT
Comment on
attachment 148713
[details]
Proposed fix 1. Use minimumValueForLength instead of Lengt::value. Clearing flags on attachment: 148713 Committed
r120934
: <
http://trac.webkit.org/changeset/120934
>
WebKit Review Bot
Comment 4
2012-06-21 10:15:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug